--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <!-- Global -->
     <string name="sopt">SOPT</string>
+    <string name="save">저장</string>
     <string name="email">이메일</string>
 
     <!-- Sign -->
@@ -10,5 +11,8 @@
     <string name="sign_password">비밀번호</string>
     <string name="sign_email_detail">이메일을 정확하게 입력해 주세요.</string>
     <string name="sign_password_detail">8자리 이상의 영문자, 숫자, 특수 문자 조합으로 입력해 주세요.</string>
+    <string name="delete_all">전체 삭제</string>
+    <string name="friend_list">친구 목록</string>
+    <string name="name">이름</string>
 
 </resources>
