--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,8 @@
     <string name="enfp1">표정 밝음</string>
     <string name="enfp2">통찰력 있음</string>
     <string name="enfp3">언어표현 잘함</string>
+
+    <!-- Github -->
+    <string name="github_detail_follower">Followers</string>
+    <string name="github_detail_repository">Repositories</string>
 </resources>
