--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,6 +89,9 @@
     <string name="enfp3">언어표현 잘함</string>
 
     <!-- Github -->
+    <string name="github_username">유저이름</string>
     <string name="github_detail_follower">Followers</string>
     <string name="github_detail_repository">Repositories</string>
+    <string name="github_push_list_title">푸시 이벤트 목록</string>
+    <string name="sign_github_username_detail">깃허브 username을 입력해 주세요.</string>
 </resources>
