[feat] 로딩 중 로띠 이미지 추가 및 visibility 조절

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,4 +94,7 @@
     <string name="github_detail_repository">Repositories</string>
     <string name="github_push_list_title">푸시 이벤트 목록</string>
     <string name="sign_github_username_detail">깃허브 username을 입력해 주세요.</string>
+
+    <!-- Thread -->
+    <string name="thread_count_guide">이미지를 클릭해 보세요!</string>
 </resources>
