[feat] 레스토랑 정보 뷰 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,15 @@
     <string name="calendar_schedule_study">스터디</string>
     <string name="calendar_schedule_exercise">운동</string>
     <string name="calendar_schedule_meeting">미팅</string>
+
+    <!-- Restaurant -->
+    <string name="monday">월요일</string>
+    <string name="tuesday">화요일</string>
+    <string name="wednesday">수요일</string>
+    <string name="thursday">목요일</string>
+    <string name="friday">금요일</string>
+    <string name="saturday">토요일</string>
+    <string name="sunday">일요일</string>
+
+    <string name="restaurant_detail_score_format">(️%s)</string>
 </resources>
